privacy title update

--- a/public/index.html
+++ b/public/index.html
@@ -158,8 +158,8 @@
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="content">
                       
-                        <h3 class="text-white"><ion-icon name="lock-closed"></ion-icon> Premium Privacy</h3>
-                        <h2 class="subheading text-white font-weight-bold mb-10">Say no to Tracking!</h2>
+                        <h3 class="text-white">Say no to Tracking!</h3>
+                        <h2 class="subheading text-white font-weight-bold mb-10">Premium Privacy <ion-icon name="lock-closed"></ion-icon></h2>
                         <p class="text-white">Echo Photos does not monetize your private data.
                             We do not track user data for ads or to sell them. For us, you are our customer -
                             you deserve our best service!</p>
@@ -167,7 +167,7 @@
                           we keep up with the newest safety features.</p>
                         <p class="text-white">Our servers run with cutting-edge security features - we do not put anything at risk.</p>
                         <p class="text-white">Privacy is our top concern. All you data is securely stored in Switzerland 🇨🇭. 
-                          One should never worry about the protection of your pictures.</p>
+                          One should never worry about the protection of one's pictures.</p>
                     </div>
                 </div>
             </div>
