--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center mb-5 mb-md-0">
-                    <img src="images/iphone.png" alt="">
+                    <img src="images/title.png" alt="">
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="block">
@@ -153,7 +153,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center mb-5 mb-lg-0">
-                    <img class="img-fluid" src="images/iphone.png" alt="">
+                    <img class="img-fluid" src="images/groups.png" alt="">
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="content">
@@ -187,7 +187,7 @@
             </div>
             <div class="row mb-40">
                 <div class="col-md-6 text-center mb-5 mb-lg-0">
-                    <img class="img-fluid" src="images/iphone.png" alt="">
+                    <img class="img-fluid" src="images/group.png" alt="">
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="content">
@@ -202,12 +202,12 @@
             <div class="row">
                 <div class="col-md-6 order-md-1 order-2 align-self-center text-center text-md-left">
                     <div class="content">
-                        <h4 class="subheading">Premium Photos for unforgettable Events</h4>
+                        <h4 class="subheading">Premium Photos for unforgettable Moments</h4>
                         <p>Share pictures with hundreds of guests of events like: weddings, parties and other festivities. 🥳</p>
                     </div>
                 </div>
                 <div class="col-md-6 order-md-2 order-1 text-center mb-5 mb-lg-0">
-                    <img class="img-fluid" src="images/iphone.png" alt="">
+                    <img class="img-fluid" src="images/image.png" alt="">
                 </div>
             </div>
         </div>
@@ -226,7 +226,7 @@
             </div>
             <div class="row mb-40">
                 <div class="col-md-6 text-center mb-5 mb-lg-0">
-                    <img class="img-fluid" src="images/iphone.png" alt="">
+                    <img class="img-fluid" src="images/requestmap.png" alt="">
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="content">
@@ -247,7 +247,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 order-md-2 order-1 text-center mb-5 mb-lg-0">
-                    <img class="img-fluid" src="images/iphone.png" alt="">
+                    <img class="img-fluid" src="images/request.png" alt="">
                 </div>
             </div>
         </div>
