--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
                             <ion-icon name="radio"></ion-icon>
                         </h3>
                         <h4 class="font-weight-bold mb-2">Photo Requests</h4>
-                        <p>Request amazing pictures from strangers. They can take the perfect picture of you that you would never have imagined.</p>
+                        <p>Get amazing pictures of you taken from unknown others. From their position, they can make picture of you that you would never have dreamed of!</p>
                     </div>
                     <div class="mb-40 text-center text-md-left">
                         <h3 class="font-weight-bold mb-2">
