--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
                             <ion-icon name="people"></ion-icon>
                         </h3>
                         <h4 class="font-weight-bold mb-2">Social Sharing</h4>
-                        <p>Comments and likes for you group images: Echo provides a private social network experience.
+                        <p>Comments and likes for your group images: Echo provides a private social network experience.
                             For real friends only.</p>
                     </div>
                 </div>
