soonn on app store

--- a/public/index.html
+++ b/public/index.html
@@ -73,8 +73,8 @@
                     <div class="block">
                         <h1 class="font-weight-bold mb-4 font-size-55">Simple. Forever. Supreme Photo Sharing</h1>
                         <p class="mb-4">The prime solution for sharing photos: Create groups, add friends, upload high-res images and 
-                            write comments - make everlasting memories!</p>
-                        <a href="https://apps.apple.com/us/app/id1499073049"><img src="images/AppStore.svg" alt=""></a>
+                        <p >Soon on <img src="images/AppStore.svg" alt=""></p>
+                        <!-- <a href="https://apps.apple.com/us/app/id1499073049"><img src="images/AppStore.svg" alt=""></a> -->
                     </div>
                 </div>
             </div><!-- .row close -->
