added privacy subfolder

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,8 @@
                     <div class="block">
                         <h1 class="font-weight-bold mb-4 font-size-55">Simple. Forever. Supreme Photo Sharing</h1>
                         <p class="mb-4">The prime solution for sharing photos: Create groups, add friends, upload high-resolution images and 
-                        <p >Soon on <img src="images/AppStore.svg" alt=""></p>
+                             write comments - make everlasting memories!</p>
+                        <p>Soon on <img src="images/AppStore.svg" alt=""></p>
                         <!-- <a href="https://apps.apple.com/us/app/id1499073049"><img src="images/AppStore.svg" alt=""></a> -->
                     </div>
                 </div>
@@ -271,6 +272,9 @@
                             </li>
                             <li class="list-inline-item">
                                 <a href="#download">Download</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="/privacy">Privacy</a>
                             </li>
                         </ul>
                         <p class="copyright-text">Copyright &copy; <a href="http://www.echolabs.ch"> Echo Labs AG</a> |
