--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center mb-5 mb-md-0">
-                    <img src="images/title.png" alt="">
+                    <img src="images/title.png" alt="" width="300">
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="block">
