ios app banner, invite placeholder, cleanup

--- a/public/join-group/index.html
+++ b/public/join-group/index.html
@@ -2,38 +2,27 @@
 <html class="no-js">
 
 <head>
+    <meta name="apple-itunes-app" content="app-id=1499073049">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Echo Photos</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-    <!-- Fonts -->
-    <!-- Source Sans Pro -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400i|Source+Sans+Pro:300,400,600,700" rel="stylesheet"> -->
-
-    <!-- <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700" rel="stylesheet"> -->
-
     <!-- CSS -->
     <!-- Bootstrap CDN -->
-    <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../plugins/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!-- Responsive Stylesheet -->
 </head>
 
 <body id="body">
 
-    <div id="preloader-wrapper">
-        <div class="pre-loader"></div>
-    </div>
-
     <!-- navigation -->
     <header id="download">
         <div class="container">
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
-                <a class="navbar-brand" href="#"><img src="images/logo.svg" width="125" height="50" alt=""></a>
+                <a class="navbar-brand" href="../#"><img src="../images/logo.svg" width="125" height="50" alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -44,16 +33,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto text-center text-lg-left">
                         <li class="nav-item">
-                            <a class="nav-link" href="#features">Features</a>
+                            <a class="nav-link" href="../#features">Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#groups">Groups</a>
+                            <a class="nav-link" href="../#groups">Groups</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#requests">Requests</a>
+                            <a class="nav-link" href="../#requests">Requests</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#download">Download</a>
+                            <a class="nav-link" href="../#download">Download</a>
                         </li>
                     </ul>
                 </div>
@@ -67,15 +56,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center mb-5 mb-md-0">
-                    <img src="images/title.png" alt="" width="300">
+                    <img src="../images/AppIcon.svg" alt="" width="300">
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="block">
-                        <h1 class="font-weight-bold mb-4 font-size-55">Simple. Forever. Supreme Photo Sharing</h1>
-                        <p class="mb-4">The prime solution for sharing photos: Create groups, add friends, upload
-                            high-resolution images and
-                            write comments - make everlasting memories!</p>
-                        <a href="https://apps.apple.com/us/app/id1499073049"><img src="images/AppStore.svg" alt=""></a>
+                        <h1 class="font-weight-bold mb-4 font-size-55">Open on Echo Photos</h1>
+                        <p class="mb-4">The invite link you are trying to open can be opened with the Echo Photos App</p>
+                        <a href="https://apps.apple.com/us/app/id1499073049"><img src="../images/AppStore.svg" alt=""></a>
                     </div>
                 </div>
             </div><!-- .row close -->
@@ -88,22 +75,23 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="block">
-                        <a href="#" class="footer-logo mb-4">Echo Photos</a>
+                        <a href="../#" class="footer-logo mb-4">Echo Photos</a>
                         <ul class="list-inline footer-menu">
                             <li class="list-inline-item">
-                                <a href="#">Home</a>
+                                <a href="../#">Home</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#groups">Groups</a>
+                                <a href="../#groups">Groups</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="http://instagram.com/echophotos.io" target="_blank" rel="noreferrer noopener">Instagram</a>
+                                <a href="http://instagram.com/echophotos.io" target="_blank"
+                                    rel="noreferrer noopener">Instagram</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#download">Download</a>
+                                <a href="../#download">Download</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="/privacy">Privacy</a>
+                                <a href="../privacy">Privacy</a>
                             </li>
                         </ul>
                         <p class="copyright-text">Copyright &copy; <a href="http://www.echolabs.ch"> Echo Labs AG</a> |
@@ -118,9 +106,9 @@
 
     <!-- Js -->
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
-    <script src="plugins/jquery-2.1.1.min.js"></script>
-    <script src="plugins/bootstrap/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../plugins/jquery-2.1.1.min.js"></script>
+    <script src="../plugins/bootstrap/bootstrap.min.js"></script>
+    <script src="../js/main.js"></script>
 
 </body>
 
