--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,13 @@
 <html class="no-js">
 
 <head>
+    <meta name="apple-itunes-app" content="app-id=1499073049">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Echo Photos</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-    <!-- Fonts -->
-    <!-- Source Sans Pro -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400i|Source+Sans+Pro:300,400,600,700" rel="stylesheet"> -->
-
-    <!-- <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700" rel="stylesheet"> -->
-
+    
     <!-- CSS -->
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
