--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -2,19 +2,12 @@
 <html class="no-js">
 
 <head>
+  <meta name="apple-itunes-app" content="app-id=1499073049">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Echo Photos - Privacy</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-  <!-- Fonts -->
-  <!-- Source Sans Pro -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400i|Source+Sans+Pro:300,400,600,700" rel="stylesheet"> -->
-
-  <!-- <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700" rel="stylesheet"> -->
 
   <!-- CSS -->
   <!-- Bootstrap CDN -->
