add carbon neutrality

--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@
         </div><!-- .container close -->
     </section><!-- #service close -->
 
-    <section class="bg-orange section">
+    <section class="bg-dark section">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center mb-5 mb-lg-0">
@@ -163,6 +163,25 @@
                         <p class="text-white">Privacy is our top concern. All your data is securely stored in Switzerland 🇨🇭. 
                           One should never worry about the protection of one's pictures.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 align-self-center text-center text-md-right">
+                    <div class="content">
+    
+                        <h3 style="color:green;">Care for the Climate</h3>
+                        <h2 style="color:green;" class="subheading font-weight-bold mb-10"><ion-icon name="leaf"></ion-icon> Carbon Neutral</h2>
+                        <p>Our servers run entirely Carbon-Neutral.</p>
+                        <p>Plus, we are committed to be entriely carbon-free by 2030.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 text-center mb-5 mb-lg-0">
+                    <img class="img-fluid" src="https://source.unsplash.com/eluzJSfkNCk/400x600" alt="">
                 </div>
             </div>
         </div>
