add google play links

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,12 @@
                         <h1 class="font-weight-bold mb-4 font-size-55">Simple. Forever. Supreme Photo Sharing</h1>
                         <p class="mb-4">The prime solution for sharing photos: Create groups, add friends, upload high-resolution images and 
                              write comments - make everlasting memories!</p>
-                        <a href="https://apps.apple.com/us/app/id1499073049"><img src="images/AppStore.svg" alt=""></a>
+                        <a href="https://apps.apple.com/us/app/id1499073049">
+                            <img src="images/AppStore.svg" height="40" alt="Get Echo from the App Store">
+                        </a>
+                        <a href="https://play.google.com/store/apps/details?id=ch.echolabs.echo">
+                            <img src="images/GooglePlay.svg" height="40" alt="Get Echo from Google Play">
+                        </a>
                     </div>
                 </div>
             </div><!-- .row close -->
