--- a/public/index.html
+++ b/public/index.html
@@ -83,8 +83,7 @@
                 <iframe 
                 width="100%"
                 height="800"
-                controls=0
-                src="https://www.youtube.com/embed/CL4ZEa2aEoo" 
+                src="https://www.youtube.com/embed/CL4ZEa2aEoo?rel=0&autoplay=1&showinfo=0&controls=0" 
                 title="Echo Photos"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
