fix app link sha, image links

--- a/public/join-group/index.html
+++ b/public/join-group/index.html
@@ -63,10 +63,10 @@
                         <h1 class="font-weight-bold mb-4 font-size-55">Open on Echo Photos</h1>
                         <p class="mb-4">The invite link you are trying to open can be opened with the Echo Photos App</p>
                         <a href="https://apps.apple.com/us/app/id1499073049">
-                            <img src="images/AppStore.svg" height="40" alt="Get Echo from the App Store">
+                            <img src="../images/AppStore.svg" height="40" alt="Get Echo from the App Store">
                         </a>
                         <a href="https://play.google.com/store/apps/details?id=ch.echolabs.echo">
-                            <img src="images/GooglePlay.svg" height="40" alt="Get Echo from Google Play">
+                            <img src="../images/GooglePlay.svg" height="40" alt="Get Echo from Google Play">
                         </a>
                    </div>
                 </div>
