--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -88,6 +88,9 @@
       a contract or required for us to be able to render our services and process contracts. Voluntary information is marked
       as such. There are no negative consequences of not providing this data. However, not providing data may in some cases
       make communication with you difficult or delayed.
+
+      Specifically, we collect and upload your photo and text data when you post it to a group. Additionally, when you enables the app 
+      to use adress book data, limited information is uploaded to our server to identify the user's contacts.
       </p>
       <h3 class="font-weight-bold mb-2">Cookies</h3>
       <p>
