--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -91,6 +91,8 @@
 
       Specifically, we collect and upload your photo and text data when you post it to a group. Additionally, when you enables the app 
       to use adress book data, limited information is uploaded to our server to identify the user's contacts.
+
+      The thereby collected data is not used to track the user, analyze his behavior and neither sold nor shared to any third-party service.
       </p>
       <h3 class="font-weight-bold mb-2">Cookies</h3>
       <p>
