--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <header id="download">
         <div class="container">
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
-                <a class="navbar-brand" href="#"><img src="images/logo.svg" width="125" height="50" alt=""></a>
+                <a class="navbar-brand" href="#"><img src="images/logo125.png"  alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -78,18 +78,6 @@
             </div><!-- .row close -->
         </div><!-- .container close -->
     </section><!-- header close -->
-
-    <div class="div">
-                <iframe 
-                width="100%"
-                height="800"
-                src="https://www.youtube.com/embed/CL4ZEa2aEoo?rel=0&autoplay=1&showinfo=0&controls=0" 
-                title="Echo Photos"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
-                </iframe>
-            </div>
 
 
     <!-- 
@@ -241,6 +229,14 @@
             </div>
         </div>
     </section>
+    
+    <div class="div">
+        <iframe width="100%" height="800"
+            src="https://www.youtube.com/embed/CL4ZEa2aEoo?rel=0&autoplay=1&showinfo=0&controls=0" title="Echo Photos"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
+    </div>
 
     <section id="requests" class="feature-list section">
         <div class="container">
