--- a/public/join-group/index.html
+++ b/public/join-group/index.html
@@ -22,7 +22,7 @@
     <header id="download">
         <div class="container">
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
-                <a class="navbar-brand" href="../#"><img src="../images/logo.svg" width="125" height="50" alt=""></a>
+                <a class="navbar-brand" href="../#"><img src="../images/logo125.png"  alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center mb-5 mb-md-0">
-                    <img src="../images/AppIcon.svg" alt="" width="300">
+                    <img src="../images/AppIcon300.png">
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="block">
