rename groups as albums

--- a/public/404.html
+++ b/public/404.html
@@ -35,7 +35,7 @@
                             <a class="nav-link" href="#features">Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#groups">Groups</a>
+                            <a class="nav-link" href="#albums">Albums</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#requests">Requests</a>
@@ -79,7 +79,7 @@
                                 <a href="#">Home</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#groups">Groups</a>
+                                <a href="#albums">Albums</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="http://instagram.com/echophotos.io" target="_blank" rel="noreferrer noopener">Instagram</a>
