--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                             <a class="nav-link" href="#features">Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#groups">Groups</a>
+                            <a class="nav-link" href="#albums">Albums</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#requests">Requests</a>
@@ -60,7 +60,7 @@
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="block">
                         <h1 class="font-weight-bold mb-4 font-size-55">Simple. Forever. Supreme Photo Sharing</h1>
-                        <p class="mb-4">The prime solution for sharing photos: Create groups, add friends, upload high-resolution images and 
+                        <p class="mb-4">The prime solution for sharing photos: Create albums, add friends, upload high-resolution images and 
                              write comments - make everlasting memories!</p>
                         <a href="https://apps.apple.com/us/app/id1499073049">
                             <img src="images/AppStore.svg" height="40" alt="Get Echo from the App Store">
@@ -187,12 +187,12 @@
     </section>
 
 
-    <section id="groups" class="feature-list section">
+    <section id="albums" class="feature-list section">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="heading">
-                        <h2>Group Sharing</h2>
+                        <h2>Shared Albums</h2>
                     </div>
                 </div>
 
@@ -207,7 +207,7 @@
                         <p>With Echo Photos, you'll get fast, simple and eternal photo sharing. No subscription needed!</p>
                         <p>Echo Photos is the best way to share pictures of a memorable day with your friends.</p>
                         <p>Safely store your pictures with Echo Photos' eternal storage.</p>
-                        <p>Like and comment your friends' pictures in your groups.</p>
+                        <p>Like and comment your friends' pictures in your albums.</p>
                     </div>
                 </div>
             </div>
@@ -284,7 +284,7 @@
                                 <a href="#">Home</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#groups">Groups</a>
+                                <a href="#albums">Albums</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="http://instagram.com/echophotos.io" target="_blank" rel="noreferrer noopener">Instagram</a>
