--- a/public/join-group/index.html
+++ b/public/join-group/index.html
@@ -36,7 +36,7 @@
                             <a class="nav-link" href="../#features">Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../#groups">Groups</a>
+                            <a class="nav-link" href="../#albums">Albums</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../#requests">Requests</a>
@@ -86,7 +86,7 @@
                                 <a href="../#">Home</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="../#groups">Groups</a>
+                                <a href="../#albums">Albums</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="http://instagram.com/echophotos.io" target="_blank"
